apps/production/lute-gos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lute
  namespace: lute-gos
spec:
  type: ClusterIP
  selector:
    app: lute
  ports:
  - name: web
    port: 5001
    targetPort: 5001
