apps/production/lute-gos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: lute-gos
spec:
  parentRefs:
    - name: gateway-external
      namespace: traefik-external
      sectionName: websecure-gosoncio-dev
  hostnames:
    - lute.gosoncio.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: lute
          kind: Service
          port: 5001
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc
  namespace: lute-gos
spec:
  plugin:
    traefik-oidc-auth:
      Secret: urn:k8s:secret:oidc:secret
      Provider:
        Url: https://keycloak.relyq.dev/realms/claire
        ClientId: urn:k8s:secret:oidc:keycloak-client-id
        ClientSecret: urn:k8s:secret:oidc:keycloak-client-secret
        UsePkce: false
        ValidAudience: account
      SessionCookie:
        Domain: gosoncio.dev
      Authorization:
        AssertClaims:
          - Name: resource_access.lute-gos.roles
            AllOf:
              - gos
